# HO_homog

./: .gitignore  .pth  LICENSE  NOTES.txt  README.html  README.md  __init__.py  create_mesh.py  demo_pantograph_mesh.py  demo_pantograph_mesh_essai_refine_points_abandon28nov.py  geometry.py  geometry_test.py  homog2d.py  homog2d_demo.py  index.md  materials.py  mesh_generate_2D.py  mesh_tools.py  mesh_tools_test.py  pantograph.brep  pantograph.msh  part.py  part_test.py  requirements.txt  setup.cfg  setup.py
HO_homog/: __init__.py  materials.py  toolbox_FEniCS.py
demo/: demo_homog2d.py  demo_import_mesh_xdmf.py  demo_pantograph_compare.py  demo_pantograph_compare_same_mesh.py  demo_pantograph_full_scale.py  demo_pantograph_mesh.py  homog2d_demo.py
deriv_topo/: deriv_topo.h5  deriv_topo.py  deriv_topo.xdmf  homog2d.py  mesh.py  panto_coarse.h5  panto_coarse.msh  panto_coarse.xdmf  panto_coarse.xml  panto_coarse_facet_region.xml  panto_coarse_physical_region.xml  panto_fine.h5  panto_fine.msh  panto_fine.xdmf  panto_fine.xml  panto_fine_facet_region.xml  panto_fine_physical_region.xml
ho_homog/: __init__.py  full_scale_pb.py  geometry.py  homog2d.py  homog_beam.py  materials.py  mesh_generate_2D.py  mesh_tools.py  part.py  periodicity.py  toolbox_FEniCS.py  toolbox_gmsh.py  toolbox_misc.py
ho_homog.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
test/: __init__.py  context.py  couple_panto.pvsm  full_scale_pb_test.py  geometry_test.py  homog2d_test.py  mesh_tools_test.py  part_test.py  periodicity_test.py  test_cpp_expression.py  toolbox_test.py  (+4 more)
(+36 files in other folders)
