#doc : https://setuptools.readthedocs.io/en/latest/setuptools.html#options
#template https://gist.github.com/althonos/6914b896789d3f2078d1e6237642c35c
#template 2 : https://www.scivision.co/minimal-setup-py-with-prerequisites/

[metadata]
name = ho_homog
version = 0.1
#attr: HO_homog.__version__
description = Numerical homogenization of periodic materials by use of a higher order homogenization scheme.
long_description = file: README.md
long_description_content_type = text/markdown
author = Baptiste Durand, Arthur Lebée
author_email = baptiste.durand@enpc.fr
url = https://gitlab.enpc.fr/baptiste.durand/HO_homog
keywords = homogenization, higher-order asymptotic homogenization, strain gradient, materials, finite element method, FEM
license = Apache License 2.0
license-file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Operating System :: POSIX :: Linux
    Topic :: Scientific/Engineering
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Intended Audience :: Science/Research
    Natural Language :: French

[options]
packages = ho_homog
zip_safe = False
python_requires = >= 3.6
setup_requires =
    setuptools >=38.3.0
    pip
install_requires =
    h5py == 2.9.0 # pour meshio
    matplotlib
    more_itertools
    numpy
    gmsh
    meshio

include_package_data = True

